# lidar_xyz

./: CMakeLists.txt  README.md  package.xml
config/: detector.yaml  detector_xyz.yaml
include/lidar_xyz/: Bbox_xyz.h  Detector_xyz.h
launch/: detector_xyz.yaml  object_detection.launch  sim.launch  test_lidar.launch
msg/: BoundingBox3DArray.msg
rviz/: lidar_bag.rviz  sim.rviz  sim_bbox.rviz
src/: Bbox_xyz.cpp  Detector_xyz.cpp  bbox_xyz_node.cpp  detector_xyz_node.cpp  lidar_tf_broadcaster.cpp  tf_broadcaster.cpp
